hphp/hack/test/typecheck/shape_remove_key5.php.exp
File "shape_remove_key5.php", line 13, characters 31-32:
Was expecting a constant string, class constant, or int (for shape access) (Typing[4051])
